--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.9.2",
+    "@web3modal/ethereum": "^2.0.0-beta.8",
+    "@web3modal/react": "^2.0.0-beta.8",
+    "daisyui": "^2.43.0",
+    "ethers": "^5.7.2",
     "next": "latest",
+    "next-auth": "^4.18.5",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.9.2",
+    "web3": "^1.7.4",
+    "web3.storage": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
